--- a/style.css
+++ b/style.css
@@ -328,6 +328,13 @@ select {
 		font-size: 1.6rem;
 		flex-basis: 20rem;
 	}
+
+	.social-button {
+		width: 3rem;
+		height: 3rem;
+		font-size: 1.5rem;
+	}
+
 	.copyright {
 		font-size: 1.2rem;
 	}
